Package_Tools/include_C/in_arbeit/fertig/SDL_joystick.h


extern SDL_Mutex *SDL_joystick_lock;
typedef struct SDL_Joystick SDL_Joystick;
typedef Uint32 SDL_JoystickID;
typedef enum SDL_JoystickType
{
    SDL_JOYSTICK_TYPE_UNKNOWN,
    SDL_JOYSTICK_TYPE_GAMEPAD,
    SDL_JOYSTICK_TYPE_WHEEL,
    SDL_JOYSTICK_TYPE_ARCADE_STICK,
    SDL_JOYSTICK_TYPE_FLIGHT_STICK,
    SDL_JOYSTICK_TYPE_DANCE_PAD,
    SDL_JOYSTICK_TYPE_GUITAR,
    SDL_JOYSTICK_TYPE_DRUM_KIT,
    SDL_JOYSTICK_TYPE_ARCADE_PAD,
    SDL_JOYSTICK_TYPE_THROTTLE,
    SDL_JOYSTICK_TYPE_COUNT
} SDL_JoystickType;
typedef enum SDL_JoystickConnectionState
{
    SDL_JOYSTICK_CONNECTION_INVALID = -1,
    SDL_JOYSTICK_CONNECTION_UNKNOWN,
    SDL_JOYSTICK_CONNECTION_WIRED,
    SDL_JOYSTICK_CONNECTION_WIRELESS
} SDL_JoystickConnectionState;
#define SDL_JOYSTICK_AXIS_MAX   32767
#define SDL_JOYSTICK_AXIS_MIN   -32768
extern  void  SDL_LockJoysticks(void) ;
extern  void  SDL_UnlockJoysticks(void) ;
extern  bool  SDL_HasJoystick(void);
extern  SDL_JoystickID *  SDL_GetJoysticks(int *count);
extern  const char *  SDL_GetJoystickNameForID(SDL_JoystickID instance_id);
extern  const char *  SDL_GetJoystickPathForID(SDL_JoystickID instance_id);
extern  int  SDL_GetJoystickPlayerIndexForID(SDL_JoystickID instance_id);
extern  SDL_GUID  SDL_GetJoystickGUIDForID(SDL_JoystickID instance_id);
extern  Uint16  SDL_GetJoystickVendorForID(SDL_JoystickID instance_id);
extern  Uint16  SDL_GetJoystickProductForID(SDL_JoystickID instance_id);
extern  Uint16  SDL_GetJoystickProductVersionForID(SDL_JoystickID instance_id);
extern  SDL_JoystickType  SDL_GetJoystickTypeForID(SDL_JoystickID instance_id);
extern  SDL_Joystick *  SDL_OpenJoystick(SDL_JoystickID instance_id);
extern  SDL_Joystick *  SDL_GetJoystickFromID(SDL_JoystickID instance_id);
extern  SDL_Joystick *  SDL_GetJoystickFromPlayerIndex(int player_index);
typedef struct SDL_VirtualJoystickDesc
{
    Uint32 version;     
    Uint16 type;        
    Uint16 padding;     
    Uint16 vendor_id;   
    Uint16 product_id;  
    Uint16 naxes;       
    Uint16 nbuttons;    
    Uint16 nballs;      
    Uint16 nhats;       
    Uint16 ntouchpads;  
    Uint16 nsensors;    
    Uint16 padding2[2]; 
    Uint32 button_mask; 
    Uint32 axis_mask;   
    const char *name;   
    const SDL_VirtualJoystickTouchpadDesc *touchpads;   
    const SDL_VirtualJoystickSensorDesc *sensors;       
    void *userdata;     
    void ( *Update)(void *userdata); 
    void ( *SetPlayerIndex)(void *userdata, int player_index); 
    bool ( *Rumble)(void *userdata, Uint16 low_frequency_rumble, Uint16 high_frequency_rumble); 
    bool ( *RumbleTriggers)(void *userdata, Uint16 left_rumble, Uint16 right_rumble); 
    bool ( *SetLED)(void *userdata, Uint8 red, Uint8 green, Uint8 blue); 
    bool ( *SendEffect)(void *userdata, const void *data, int size); 
    bool ( *SetSensorsEnabled)(void *userdata, bool enabled); 
    void ( *Cleanup)(void *userdata); 
} SDL_VirtualJoystickDesc;
extern  SDL_JoystickID  SDL_AttachVirtualJoystick(const SDL_VirtualJoystickDesc *desc);
extern  bool  SDL_DetachVirtualJoystick(SDL_JoystickID instance_id);
extern  bool  SDL_IsJoystickVirtual(SDL_JoystickID instance_id);
extern  bool  SDL_SetJoystickVirtualAxis(SDL_Joystick *joystick, int axis, Sint16 value);
extern  bool  SDL_SetJoystickVirtualBall(SDL_Joystick *joystick, int ball, Sint16 xrel, Sint16 yrel);
extern  bool  SDL_SetJoystickVirtualButton(SDL_Joystick *joystick, int button, bool down);
extern  bool  SDL_SetJoystickVirtualHat(SDL_Joystick *joystick, int hat, Uint8 value);
extern  bool  SDL_SetJoystickVirtualTouchpad(SDL_Joystick *joystick, int touchpad, int finger, bool down, float x, float y, float pressure);
extern  bool  SDL_SendJoystickVirtualSensorData(SDL_Joystick *joystick, SDL_SensorType type, Uint64 sensor_timestamp, const float *data, int num_values);
extern  SDL_PropertiesID  SDL_GetJoystickProperties(SDL_Joystick *joystick);
#define SDL_PROP_JOYSTICK_CAP_MONO_LED_BOOLEAN          "SDL.joystick.cap.mono_led"
#define SDL_PROP_JOYSTICK_CAP_RGB_LED_BOOLEAN           "SDL.joystick.cap.rgb_led"
#define SDL_PROP_JOYSTICK_CAP_PLAYER_LED_BOOLEAN        "SDL.joystick.cap.player_led"
#define SDL_PROP_JOYSTICK_CAP_RUMBLE_BOOLEAN            "SDL.joystick.cap.rumble"
#define SDL_PROP_JOYSTICK_CAP_TRIGGER_RUMBLE_BOOLEAN    "SDL.joystick.cap.trigger_rumble"
extern  const char *  SDL_GetJoystickName(SDL_Joystick *joystick);
extern  const char *  SDL_GetJoystickPath(SDL_Joystick *joystick);
extern  int  SDL_GetJoystickPlayerIndex(SDL_Joystick *joystick);
extern  bool  SDL_SetJoystickPlayerIndex(SDL_Joystick *joystick, int player_index);
extern  SDL_GUID  SDL_GetJoystickGUID(SDL_Joystick *joystick);
extern  Uint16  SDL_GetJoystickVendor(SDL_Joystick *joystick);
extern  Uint16  SDL_GetJoystickProduct(SDL_Joystick *joystick);
extern  Uint16  SDL_GetJoystickProductVersion(SDL_Joystick *joystick);
extern  Uint16  SDL_GetJoystickFirmwareVersion(SDL_Joystick *joystick);
extern  const char *  SDL_GetJoystickSerial(SDL_Joystick *joystick);
extern  SDL_JoystickType  SDL_GetJoystickType(SDL_Joystick *joystick);
extern  void  SDL_GetJoystickGUIDInfo(SDL_GUID guid, Uint16 *vendor, Uint16 *product, Uint16 *version, Uint16 *crc16);
extern  bool  SDL_JoystickConnected(SDL_Joystick *joystick);
extern  SDL_JoystickID  SDL_GetJoystickID(SDL_Joystick *joystick);
extern  int  SDL_GetNumJoystickAxes(SDL_Joystick *joystick);
extern  int  SDL_GetNumJoystickBalls(SDL_Joystick *joystick);
extern  int  SDL_GetNumJoystickHats(SDL_Joystick *joystick);
extern  int  SDL_GetNumJoystickButtons(SDL_Joystick *joystick);
extern  void  SDL_SetJoystickEventsEnabled(bool enabled);
extern  bool  SDL_JoystickEventsEnabled(void);
extern  void  SDL_UpdateJoysticks(void);
extern  Sint16  SDL_GetJoystickAxis(SDL_Joystick *joystick, int axis);
extern  bool  SDL_GetJoystickAxisInitialState(SDL_Joystick *joystick, int axis, Sint16 *state);
extern  bool  SDL_GetJoystickBall(SDL_Joystick *joystick, int ball, int *dx, int *dy);
extern  Uint8  SDL_GetJoystickHat(SDL_Joystick *joystick, int hat);
#define SDL_HAT_CENTERED    0x00u
#define SDL_HAT_UP          0x01u
#define SDL_HAT_RIGHT       0x02u
#define SDL_HAT_DOWN        0x04u
#define SDL_HAT_LEFT        0x08u
#define SDL_HAT_RIGHTUP     (SDL_HAT_RIGHT|SDL_HAT_UP)
#define SDL_HAT_RIGHTDOWN   (SDL_HAT_RIGHT|SDL_HAT_DOWN)
#define SDL_HAT_LEFTUP      (SDL_HAT_LEFT|SDL_HAT_UP)
#define SDL_HAT_LEFTDOWN    (SDL_HAT_LEFT|SDL_HAT_DOWN)
extern  bool  SDL_GetJoystickButton(SDL_Joystick *joystick, int button);
extern  bool  SDL_RumbleJoystick(SDL_Joystick *joystick, Uint16 low_frequency_rumble, Uint16 high_frequency_rumble, Uint32 duration_ms);
extern  bool  SDL_RumbleJoystickTriggers(SDL_Joystick *joystick, Uint16 left_rumble, Uint16 right_rumble, Uint32 duration_ms);
extern  bool  SDL_SetJoystickLED(SDL_Joystick *joystick, Uint8 red, Uint8 green, Uint8 blue);
extern  bool  SDL_SendJoystickEffect(SDL_Joystick *joystick, const void *data, int size);
extern  void  SDL_CloseJoystick(SDL_Joystick *joystick);
extern  SDL_JoystickConnectionState  SDL_GetJoystickConnectionState(SDL_Joystick *joystick);
extern  SDL_PowerState  SDL_GetJoystickPowerInfo(SDL_Joystick *joystick, int *percent);